# voxtral_tts_rs

./: .gitmodules  CLAUDE.md  Cargo.toml  README.md  build.rs  install.sh
.github/workflows/: ci.yml  integration-test.yml  release.yml
scripts/: download_libtorch.sh  download_model.sh
src/: audio.rs  capi.rs  config.rs  error.rs  inference.rs  lib.rs  tensor.rs  text.rs  tokenizer.rs  voice.rs
src/backend/: mod.rs
src/backend/mlx/: array.rs  ffi.rs  io.rs  mod.rs  ops.rs  signal.rs  stream.rs
src/model/: backbone.rs  codec.rs  flow_matching.rs  kv_cache.rs  layers.rs  mod.rs  sampling.rs  weights.rs
